syntax = "proto3";
option java_package = "orbit.shared.proto";
package orbit.shared;

import "orbit/shared/node.proto";
import "google/protobuf/timestamp.proto";

message AddressableReferenceProto {
    string type = 1;
    string id = 2;
}

message AddressableLeaseProto {
    NodeIdProto nodeId = 1;
    AddressableReferenceProto reference = 2;
    google.protobuf.Timestamp renew_at = 3;
    google.protobuf.Timestamp expires_at = 4;
}